--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
+
+<a href="/contacts/"><h3>Вернуться к полному списку</h3></a>
 <h3 th:text="${contact.getSurname()}"></h3>
 <p th:text="${contact.getMiddleName()}"></p>
 <p th:text="${contact.getLastName()}"></p>
