--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -32,7 +32,7 @@
 
 <div id="add-phonenumber-form">
     <form action="?" method="post">
-        <h3>Добавление контакта</h3>
+        <h4>Добавить телефон</h4>
         <label>Телефон:</label>
         <input type="text" name="value" value="">
         <br>
