--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Контакт</title>
-    <script src="/js/jquery-3.4.0.min.js"></script>
-    <script src="/js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
@@ -15,15 +13,18 @@
 <p th:text="${contact.getLastName()}"></p>
 Дата рождения:
 <p th:text="${contact.getBirthday()}"></p>
+
+<form th:action="@{/contacts/{id}/edit(id=${contact.getId()})}" method="GET">
+    <p><input type="submit" value="Изменить" /> </p>
+</form>
 Список телефонов:
 <hr>
 
 <div th:each="PhoneNumber : ${contact.getPhoneNumberList()}">
         <p th:text="${PhoneNumber.getType()}"></p>
         <ul><li><p th:text="${PhoneNumber.getValue()}"></p>
-            <form action="#"
-                  th:action="@{/contacts/{id}/del/{phoneid}(id=${contact.getId()}, phoneid=${PhoneNumber.getId()})}"
-                  method="post">
+            <form th:action="@{/contacts/{id}(id=${contact.getId()})}" th:method="DELETE">
+                <input type="hidden" name="phoneId" th:attr="value=${PhoneNumber.getId()}" />
                 <p><input type="submit" value="Удалить" /> </p>
             </form>
         </li></ul>
@@ -36,25 +37,20 @@
         <label>Телефон:</label>
         <input type="text" name="value" value="">
         <br>
-
         <div>
-            <input type="radio" id="contactChoice1"
-                   name="phone-type" value="work" checked>
+            <input type="radio" id="contactChoice1" name="phone-type" value="work" checked>
             <label for="contactChoice1">Рабочий</label>
-
-            <input type="radio" id="contactChoice2"
-                   name="phone-type" value="home">
+            <input type="radio" id="contactChoice2" name="phone-type" value="home">
             <label for="contactChoice2">Домашний</label>
-
-            <input type="radio" id="contactChoice3"
-                   name="phone-type" value="cellphone">
+            <input type="radio" id="contactChoice3" name="phone-type" value="cellphone">
             <label for="contactChoice3">Мобильный</label>
         </div>
         <br>
-
         <button type="submit" id="save-contact">Сохранить</button>
     </form>
 </div>
 
 </body>
 </html>
+
+<!--th:action="@{/contacts/{id}/del/{phoneid}(id=${contact.getId()}, phoneid=${PhoneNumber.getId()})}"-->
