--- a/src/main/resources/templates/filtered-by-surname.html
+++ b/src/main/resources/templates/filtered-by-surname.html
@@ -2,9 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Список контактов</title>
-    <script src="/js/jquery-3.4.0.min.js"></script>
-    <script src="/js/main.js"></script>
+    <title>Результаты поиска</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
