--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Список контактов</title>
-    <script src="/js/jquery-3.4.0.min.js"></script>
-    <script src="/js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
@@ -13,46 +11,44 @@
     <div>
         <h3>Поиск контактов:</h3>
         <form method="GET" action="/contacts/filtered-by-surname/">
-                <label>Фамилия:</label><br>
-                <input type="text" name="surname" value=""><br>
-                <button type="submit">Поиск</button><br>
+            <label>Фамилия:</label><br>
+            <input type="text" name="surname" value=""><br>
+            <button type="submit">Поиск по фамилии</button><br>
         </form>
         <br>
         <form method="GET" action="/contacts/filtered-by-phone-number/">
             <label>Номер телефона:</label><br>
             <input type="text" name="phonenumber" value=""><br>
-            <button type="submit">Поиск</button><br>
+            <button type="submit">Поиск по номеру телефона</button><br>
         </form>
     </div>
 </div>
 
 <div id="create-contact-form">
     <form method="POST" action="/contacts" id="add-contact-form">
-<!--        <div>-->
-            <h3>Добавление контакта</h3>
-            <label>Фамилия:</label><input type="text" name="surname" value=""><br>
-            <label>Имя:</label><input type="text" name="middlename" value=""><br>
-            <label>Отчество:</label><input type="text" name="lastname" value=""><br>
-            <label>День рождения:</label>
-            <input type="date" name="birthday">
-            <button type="submit" id="save-contact">Сохранить</button>
-<!--        </div>-->
+        <h3>Добавление контакта</h3>
+        <label>Фамилия:</label><input type="text" name="surname" value=""><br>
+        <label>Имя:</label><input type="text" name="middlename" value=""><br>
+        <label>Отчество:</label><input type="text" name="lastname" value=""><br>
+        <label>День рождения:</label>
+        <input type="date" name="birthday">
+        <button type="submit" id="save-contact">Сохранить</button>
     </form>
 </div>
-
 
 <div id="create-contact-form-ajax">
     <form id="add-contact-form-ajax">
-            <h3>Добавление контакта</h3>
-            <label>Фамилия:</label><input type="text" name="surname" value=""><br>
-            <label>Имя:</label><input type="text" name="middlename" value=""><br>
-            <label>Отчество:</label><input type="text" name="lastname" ><br>
-            <label>День рождения:</label>
-            <input type="date" name="birthday">
-            <button id="fetch-post-button">fetch_test</button>
+        <h3>Добавление контакта</h3>
+        <label>Фамилия:</label><input type="text" name="surname" value=""><br>
+        <label>Имя:</label><input type="text" name="middlename" value=""><br>
+        <label>Отчество:</label><input type="text" name="lastname" ><br>
+        <label>День рождения:</label>
+        <input type="date" name="birthday">
+        <button id="fetch-post-button">fetch_test</button>
     </form>
 </div>
 
+<hr>
 <button id="show-add-contact-form">Добавить контакт</button>
 <button id="show-find-contact-form">Поиск контакта</button><br>
 <p>Список контактов:</p><br>
@@ -71,7 +67,6 @@
         <hr>
     </div>
 </div>
-
 
 <script src="/js/mybestscript.js"></script>
 </body>
