--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -7,31 +7,26 @@
 </head>
 <body>
 
-<div id="find-contact-form">
-    <div>
+<div id="find-contact-container">
+    <form method="GET" action="/contacts/filtered/">
         <h3>Поиск контактов:</h3>
-        <form method="GET" action="/contacts/filtered-by-surname/">
-            <label>Фамилия:</label><br>
-            <input type="text" name="surname" value=""><br>
-            <button type="submit">Поиск по фамилии</button><br>
-        </form>
-        <br>
-        <form method="GET" action="/contacts/filtered-by-phone-number/">
-            <label>Номер телефона:</label><br>
-            <input type="text" name="phonenumber" value=""><br>
-            <button type="submit">Поиск по номеру телефона</button><br>
-        </form>
-    </div>
+        <input type="text" name="key" value=""><br>
+        <input type="radio" id="findOption1" name="findOption" value="phonenumber" checked>  <!--onchange="changeHandler();"-->
+        <label for="findOption1">Поиск по номеру телефона</label><br>
+        <input type="radio" id="findOption2" name="findOption" value="surname">
+        <label for="findOption2">Поиск по фамилии</label><br>
+        <button type="submit">Поиск</button><br>
+    </form>
 </div>
 
-<div id="create-contact-form">
-    <form method="POST" action="/contacts" id="add-contact-form">
+<div id="create-contact-container">
+    <form method="POST" action="/contacts" id="create-contact-form">
         <h3>Добавление контакта</h3>
         <label>Фамилия:</label><input type="text" name="surname" value=""><br>
         <label>Имя:</label><input type="text" name="middlename" value=""><br>
         <label>Отчество:</label><input type="text" name="lastname" value=""><br>
         <label>День рождения:</label>
-        <input type="date" name="birthday">
+        <input type="date" name="birthday"><br>
         <button type="submit" id="save-contact">Сохранить</button>
     </form>
 </div>
@@ -43,20 +38,20 @@
         <label>Имя:</label><input type="text" name="middlename" value=""><br>
         <label>Отчество:</label><input type="text" name="lastname" ><br>
         <label>День рождения:</label>
-        <input type="date" name="birthday">
+        <input type="date" name="birthday"><br>
         <button id="fetch-post-button">fetch_test</button>
     </form>
 </div>
 
 <hr>
-<button id="show-add-contact-form">Добавить контакт</button>
-<button id="show-find-contact-form">Поиск контакта</button><br>
+<button id="show-add-contact-container-button">Добавить контакт</button>
+<button id="show-find-contact-container-button">Поиск контакта</button><br>
 <p>Список контактов:</p><br>
 
 <div id="contact-list">
     <div th:each="contact : ${contacts}">
-        <a th:href="@{/contacts/{id}(id=${contact.getId()})}"
-           class="contact-link"
+        <a class="contact-link"
+           th:href="@{/contacts/{id}(id=${contact.getId()})}"
            th:attr="data-id=${contact.getId()}"
            th:text="${contact.getSurname() + ' ' + contact.getMiddleName()}"></a>
         <br>
