--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -39,7 +39,7 @@
         <label>Отчество:</label><input type="text" name="lastname" ><br>
         <label>День рождения:</label>
         <input type="date" name="birthday"><br>
-        <button id="fetch-post-button">fetch_test</button>
+        <button id="fetch-post-button">Сохранить</button>
     </form>
 </div>
 
@@ -63,6 +63,6 @@
     </div>
 </div>
 
-<script src="/js/mybestscript.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
