--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -9,7 +9,7 @@
 
 <div id="find-contact-container" class="message-container">
     <form method="GET" action="/contacts/filtered/">
-        <h3>Поиск контактов:</h3>
+        <h3>Поиск контактов</h3>
         <input type="text" name="key" value=""><br>
         <input type="radio" id="findOption1" name="findOption" value="phonenumber" checked>  <!--onchange="changeHandler();"-->
         <label for="findOption1">Поиск по номеру телефона</label><br>
