--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -35,8 +35,8 @@
     <form id="add-contact-form-ajax">
         <h3>Добавление контакта</h3>
         <label>Фамилия:</label><input type="text" name="surname" value=""><br>
-        <label>Имя:</label><input type="text" name="middlename" value=""><br>
-        <label>Отчество:</label><input type="text" name="lastname" ><br>
+        <label>Имя:</label><input type="text" name="middleName" value=""><br>
+        <label>Отчество:</label><input type="text" name="lastName" ><br>
         <label>День рождения:</label>
         <input type="date" name="birthday"><br>
         <button id="fetch-post-button">Сохранить</button>
