--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -55,8 +55,8 @@
     </form>
 </div>
 
-<button id="show-add-contact-container-button">Добавить контакт</button>
-<button id="show-create-contact-form-ajax-container-button">Добавить контакт через ajax</button>
+<!--<button id="show-add-contact-container-button">Добавить контакт</button>-->
+<button id="show-create-contact-form-ajax-container-button">Добавить контакт</button>
 <button id="show-find-contact-container-button">Поиск контакта</button><br>
 <p>Список контактов:</p><br>
 
